[gd_scene load_steps=20 format=3 uid="uid://bt0lcai0sw2bt"]

[ext_resource type="Script" uid="uid://c6j4376p5o855" path="res://scripts/menu.gd" id="1_yqeox"]
[ext_resource type="Script" uid="uid://blk0lbl4ais4u" path="res://scripts/button.gd" id="2_vjb58"]
[ext_resource type="Script" uid="uid://27qne8t2erlc" path="res://scripts/button2.gd" id="3_4ytvr"]
[ext_resource type="Script" uid="uid://ohu0e1lkvq37" path="res://scripts/button1.gd" id="4_g3eks"]
[ext_resource type="Script" uid="uid://dlj1xyaugdns7" path="res://scripts/button3.gd" id="5_v86rl"]
[ext_resource type="Script" uid="uid://5bvhialvj5y" path="res://scripts/button4.gd" id="6_g3eks"]
[ext_resource type="Script" uid="uid://djc022wdfif84" path="res://scripts/mainmenu.gd" id="7_v86rl"]
[ext_resource type="Texture2D" uid="uid://c8exa3suj8c3p" path="res://textures/stone game title fr.png" id="8_13sgg"]
[ext_resource type="Shader" uid="uid://cle260hi6vb3e" path="res://scenes/menu.gdshader" id="8_i6lef"]
[ext_resource type="Texture2D" uid="uid://cb5eajeq47cu0" path="res://textures/pixil-frame-0.png" id="9_ufwb2"]
[ext_resource type="FontFile" uid="uid://b3gix6t1pih4a" path="res://fonts/SUSEMono-Italic-VariableFont_wght.ttf" id="10_70i5f"]
[ext_resource type="Script" uid="uid://bjogwympullyx" path="res://scripts/pb.gd" id="11_mj5lg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_con2f"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 16
border_width_top = 6
border_width_right = 16
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6cdou"]
shader = ExtResource("8_i6lef")
shader_parameter/line_color = Color(0, 0, 0, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_70i5f"]
shader = ExtResource("8_i6lef")
shader_parameter/line_color = Color(0, 0, 0, 1)
shader_parameter/line_thickness = 0.88

[sub_resource type="Theme" id="Theme_i6lef"]

[sub_resource type="Gradient" id="Gradient_mj5lg"]
colors = PackedColorArray(0.0807833, 0.0807833, 0.0807833, 1, 0.233925, 0.233925, 0.233925, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ufwb2"]
gradient = SubResource("Gradient_mj5lg")
fill = 1
fill_to = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mj5lg"]
bg_color = Color(0.0807833, 0.0807834, 0.0807833, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 15
corner_radius_top_right = 55
corner_radius_bottom_right = 15
corner_radius_bottom_left = 55
shadow_color = Color(0, 0, 0, 0.32549)
shadow_size = 50
anti_aliasing_size = 10.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 706.0
offset_bottom = 371.0
script = ExtResource("1_yqeox")

[node name="SettingsPage" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1924.0
offset_bottom = 1082.0

[node name="ColorRect" type="ColorRect" parent="SettingsPage"]
layout_mode = 0
offset_left = 462.0
offset_top = 232.0
offset_right = 1417.0
offset_bottom = 239.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPage"]
layout_mode = 0
offset_left = 671.0
offset_top = 288.0
offset_right = 1199.0
offset_bottom = 817.0
theme_override_constants/separation = 31

[node name="jump" type="HBoxContainer" parent="SettingsPage/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsPage/VBoxContainer/jump"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_con2f")
text = "Jump"

[node name="Button" type="Button" parent="SettingsPage/VBoxContainer/jump"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "aaaa
"
script = ExtResource("2_vjb58")

[node name="left" type="HBoxContainer" parent="SettingsPage/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsPage/VBoxContainer/left"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_con2f")
text = "Left"

[node name="Button" type="Button" parent="SettingsPage/VBoxContainer/left"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "aaaa
"
script = ExtResource("3_4ytvr")

[node name="right" type="HBoxContainer" parent="SettingsPage/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsPage/VBoxContainer/right"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_con2f")
text = "Right"

[node name="Button" type="Button" parent="SettingsPage/VBoxContainer/right"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "aaaa
"
script = ExtResource("4_g3eks")

[node name="squish" type="HBoxContainer" parent="SettingsPage/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsPage/VBoxContainer/squish"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_con2f")
text = "Squish"

[node name="Button" type="Button" parent="SettingsPage/VBoxContainer/squish"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "aaaa
"
script = ExtResource("5_v86rl")

[node name="Stone" type="HBoxContainer" parent="SettingsPage/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsPage/VBoxContainer/Stone"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_con2f")
text = "Stone"

[node name="Button" type="Button" parent="SettingsPage/VBoxContainer/Stone"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "aaaa
"
script = ExtResource("6_g3eks")

[node name="MainMenuButton" type="Button" parent="SettingsPage"]
layout_mode = 0
offset_left = 528.0
offset_top = 918.0
offset_right = 1365.0
offset_bottom = 1029.0
theme_override_font_sizes/font_size = 75
text = "Back to Main Menu"
script = ExtResource("7_v86rl")

[node name="TextureRect" type="TextureRect" parent="SettingsPage"]
texture_filter = 1
material = SubResource("ShaderMaterial_6cdou")
layout_mode = 0
offset_left = 592.0
offset_top = -213.0
offset_right = 1270.0
offset_bottom = 465.0
texture = ExtResource("9_ufwb2")

[node name="MainMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 1917.0
offset_bottom = 1084.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
z_index = 2
layout_mode = 0
offset_left = 100.0
offset_top = 397.0
offset_right = 940.0
offset_bottom = 738.0

[node name="Start" type="Button" parent="MainMenu/VBoxContainer"]
z_index = 2
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 75
text = "Play"

[node name="Settings" type="Button" parent="MainMenu/VBoxContainer"]
z_index = 2
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 75
text = "Settings
"

[node name="Exit" type="Button" parent="MainMenu/VBoxContainer"]
z_index = 2
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 75
text = "Exit"

[node name="logo" type="TextureRect" parent="MainMenu"]
texture_filter = 1
material = SubResource("ShaderMaterial_70i5f")
layout_mode = 0
offset_left = 1114.0
offset_top = 283.0
offset_right = 1664.0
offset_bottom = 833.0
texture = ExtResource("8_13sgg")

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = -3
clip_contents = true
layout_mode = 0
offset_right = 1924.0
offset_bottom = 1082.0
mouse_filter = 2
theme = SubResource("Theme_i6lef")
texture = SubResource("GradientTexture2D_ufwb2")

[node name="StagesMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1918.0
offset_bottom = 1085.0

[node name="Label" type="Label" parent="StagesMenu"]
layout_mode = 0
offset_left = 663.0
offset_top = 74.0
offset_right = 1203.0
offset_bottom = 263.0
theme_override_fonts/font = ExtResource("10_70i5f")
theme_override_font_sizes/font_size = 150
text = "Stages"

[node name="stage1" type="Button" parent="StagesMenu"]
layout_mode = 0
offset_left = 344.0
offset_top = 396.0
offset_right = 566.0
offset_bottom = 629.0
theme_override_colors/font_outline_color = Color(0.252269, 0.377261, 0.258861, 1)
theme_override_constants/outline_size = 82
theme_override_fonts/font = ExtResource("10_70i5f")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_mj5lg")
text = "1
"

[node name="PB" type="Label" parent="StagesMenu/stage1"]
layout_mode = 0
offset_left = 58.0
offset_top = 181.0
offset_right = 157.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 25
text = "0:00.000"
horizontal_alignment = 1
script = ExtResource("11_mj5lg")

[node name="stage2" type="Button" parent="StagesMenu"]
layout_mode = 0
offset_left = 801.0
offset_top = 397.0
offset_right = 1023.0
offset_bottom = 630.0
theme_override_colors/font_outline_color = Color(0.285277, 0.338826, 0.174856, 1)
theme_override_constants/outline_size = 82
theme_override_fonts/font = ExtResource("10_70i5f")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_mj5lg")
text = "2"

[node name="PB" type="Label" parent="StagesMenu/stage2"]
layout_mode = 0
offset_left = 58.0
offset_top = 181.0
offset_right = 157.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 25
text = "0:00.000"
horizontal_alignment = 1
script = ExtResource("11_mj5lg")

[node name="stage3" type="Button" parent="StagesMenu"]
layout_mode = 0
offset_left = 1264.0
offset_top = 397.0
offset_right = 1486.0
offset_bottom = 630.0
theme_override_colors/font_outline_color = Color(0.297497, 0.240392, 0.118257, 1)
theme_override_constants/outline_size = 82
theme_override_fonts/font = ExtResource("10_70i5f")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_mj5lg")
text = "3"

[node name="PB" type="Label" parent="StagesMenu/stage3"]
layout_mode = 0
offset_left = 58.0
offset_top = 181.0
offset_right = 157.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 25
text = "0:00.000"
horizontal_alignment = 1
script = ExtResource("11_mj5lg")

[node name="MainMenuButton" type="Button" parent="StagesMenu"]
layout_mode = 0
offset_left = 528.0
offset_top = 918.0
offset_right = 1365.0
offset_bottom = 1029.0
theme_override_font_sizes/font_size = 75
text = "Back to Main Menu"

[connection signal="pressed" from="SettingsPage/VBoxContainer/jump/Button" to="SettingsPage/VBoxContainer/jump/Button" method="_on_pressed"]
[connection signal="pressed" from="SettingsPage/VBoxContainer/left/Button" to="SettingsPage/VBoxContainer/left/Button" method="_on_pressed"]
[connection signal="pressed" from="SettingsPage/VBoxContainer/right/Button" to="SettingsPage/VBoxContainer/right/Button" method="_on_pressed"]
[connection signal="pressed" from="SettingsPage/VBoxContainer/squish/Button" to="SettingsPage/VBoxContainer/squish/Button" method="_on_pressed"]
[connection signal="pressed" from="SettingsPage/VBoxContainer/Stone/Button" to="SettingsPage/VBoxContainer/Stone/Button" method="_on_pressed"]
[connection signal="pressed" from="SettingsPage/MainMenuButton" to="SettingsPage/MainMenuButton" method="_on_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="StagesMenu/stage1" to="." method="_on_stage_1_pressed"]
[connection signal="pressed" from="StagesMenu/stage2" to="." method="_on_stage_2_pressed"]
[connection signal="pressed" from="StagesMenu/stage3" to="." method="_on_stage_3_pressed"]
[connection signal="pressed" from="StagesMenu/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
